@@ -31,7 +31,6 @@ import com.google.common.util.concurrent.Uninterruptibles;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.CountDownLatch;
@@ -813,7 +812,7 @@ public abstract class AbstractDistributedDataStoreIntegrationTest {
 
         final Snapshot carsSnapshot = Snapshot.create(
             new ShardSnapshotState(new MetadataShardDataTreeSnapshot(root)),
-            Collections.emptyList(), 2, 1, 2, 1, 1, "member-1", null);
+            List.of(), 2, 1, 2, 1, 1, "member-1", null);
 
         dataTree = new InMemoryDataTreeFactory().create(DataTreeConfiguration.DEFAULT_OPERATIONAL,
             SchemaContextHelper.full());
@@ -825,7 +824,7 @@ public abstract class AbstractDistributedDataStoreIntegrationTest {
 
         final Snapshot peopleSnapshot = Snapshot.create(
             new ShardSnapshotState(new MetadataShardDataTreeSnapshot(root)),
-            Collections.emptyList(), 2, 1, 2, 1, 1, "member-1", null);
+            List.of(), 2, 1, 2, 1, 1, "member-1", null);
 
         testKit.restoreFromSnapshot = new DatastoreSnapshot(name, null, Arrays.asList(
             new DatastoreSnapshot.ShardSnapshot("cars", carsSnapshot),
